<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EventDetail">

    <com.example.thenrestaurant.MyButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/my_button"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />
    <com.example.thenrestaurant.MyEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/my_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/my_button"
        app:layout_constraintTop_toBottomOf="@id/detail_spotify"
        app:layout_constraintVertical_bias="0"/>


    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/artist1"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        style="@style/text_medium"
        android:textColor="@color/title"
        android:text="@string/event_artist"/>
    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_title"
        style="@style/text_small"
        android:textColor="@color/title"
        android:text="@string/event_date"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_date"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        style="@style/text_small"
        android:textColor="@color/bodycopy"
        android:text="@string/lorem"/>
    <TextView
        android:id="@+id/detail_spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        style="@style/text_xtrasmall"
        android:textColor="@color/success"
        android:text="@string/spotify"/>

    <Button
        android:id="@+id/btn_resertavion"
        style="@style/link_small"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/primary_buttom"
        android:text="@string/reserve_table"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>