<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:padding="16dp"
    android:background="@color/background"
    tools:context=".Food_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:id="@+id/food_image"
            android:layout_width="310dp"
            android:scaleType="centerCrop"
            android:src="@drawable/asian1"
            android:layout_height="389dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_image"
            style="@style/text_medium"
            android:textColor="@color/title"
            android:text="@string/food_category"
            android:layout_marginTop="24dp"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/food_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            style="@style/link_medium"
            android:textColor="@color/title"
            android:text="@string/_10m"/>
        <TextView
            android:id="@+id/ddtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/food_title"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/text_small"
            android:textColor="@color/bodycopy"
            android:drawablePadding="4dp"
            android:text="@string/_10m"
            android:layout_marginTop="8dp"
            app:drawableStartCompat="@drawable/ic_time_24" />
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ddtime"
            android:layout_marginTop="8dp"
            android:paddingEnd="4dp"
            style="@style/text_small"
            android:textColor="@color/bodycopy"
            android:text="@string/_10m"
            app:drawableStartCompat="@drawable/ic___stars_rating" />
        <TextView
            android:id="@+id/food_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/text_small"
            android:textColor="@color/title"
            android:layout_marginTop="8dp"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_desc"
            style="@style/text_xtrasmall"
            android:textColor="@color/bodycopy"
            android:layout_marginTop="4dp"
            android:text="@string/lorem"/>
        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_desc"
            android:layout_marginTop="16dp"
            style="@style/text_small"
            android:textColor="@color/title"
            android:text="@string/alergic_alert"/>
        <TextView
            android:id="@+id/alerg_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alertTitle"
            android:layout_marginTop="4dp"
            style="@style/text_xtrasmall"
            android:textColor="@color/bodycopy"
            android:text="@string/lorem"/>

        <TextView
            android:id="@+id/circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alerg_desc"
            style="@style/text_small"
            android:textColor="@color/bodycopy"
            android:layout_marginTop="32dp"
            android:layout_marginStart="56dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/food_composition"
            android:text="5g\nSugar"
            android:gravity="center_vertical|center_horizontal"/>
        <TextView
            android:id="@+id/circle2"
            app:layout_constraintStart_toEndOf="@id/circle"
            app:layout_constraintTop_toBottomOf="@id/alerg_desc"
            style="@style/text_small"
            android:textColor="@color/bodycopy"
            android:layout_marginTop="32dp"
            android:layout_marginStart="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/food_composition"
            android:text="5g\nSugar"
            android:gravity="center_vertical|center_horizontal"/>
        <TextView
            android:id="@+id/circle3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alerg_desc"
            style="@style/text_small"
            android:textColor="@color/bodycopy"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/food_composition"
            android:text="5g\nSugar"
            android:gravity="center_vertical|center_horizontal"/>

        <TextView
            android:id="@+id/servebetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circle3"
            android:layout_marginTop="16dp"
            style="@style/link_small"
            android:textColor="@color/title"
            android:text="@string/wine"/>
        <TextView
            android:id="@+id/seemore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/servebetter"
            app:layout_constraintTop_toBottomOf="@id/circle3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            style="@style/text_xtrasmall"
            android:textColor="@color/primary"
            android:text="@string/see_more"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/servebetter"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_wine"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/primary_buttom"
            style="@style/link_small"
            android:textColor="@color/black"
            android:text="@string/add_to_cart"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>