<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="190dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="10dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="16dp">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="225dp"/>
    <RelativeLayout
        android:layout_marginTop="235dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_xtrasmall"
            android:textColor="@color/title"
            android:text="@string/event_artist"
            android:ellipsize="end"
            android:maxLength="20"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/link_small"
            android:maxLength="3"
            android:text="@string/_10m"
            android:layout_alignParentEnd="true"
            android:textColor="@color/title"/>
        <TextView
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_xtrasmall"
            android:layout_alignParentBottom="true"
            android:drawablePadding="4dp"
            android:text="@string/_10m"
            app:drawableStartCompat="@drawable/ic_time" />
        <TextView
            android:id="@+id/food_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_xtrasmall"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/times"
            android:layout_alignParentBottom="true"
            android:drawablePadding="4dp"
            android:text="@string/westren"
            app:drawableStartCompat="@drawable/ic_jam_water_drop" />
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_xtrasmall"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentBottom="true"
            android:drawablePadding="4dp"
            android:text="4.5"
            app:drawableStartCompat="@drawable/ic_star" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>